# project-templates

./: .babelrc  .clasp.json  .claspignore  .debug  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  package.json  tsconfig.json  webpack.config.client.js
CSXS/: manifest.xml
client/: tsconfig.json
client/src/: App.tsx  helper.tsx
cpp-vcpkg/: .gitignore  CMakeLists.txt  CMakePresets.json  version.h.in
cpp-vcpkg/cpp-vcpkg/: CMakeLists.txt  main.cpp
cpp-vcpkg/tests/: feature1_test.cpp
gas-typescript/: README.md  package.json
gas-typescript/src/: sample.ts
host/src/: Premiere.tsx  host.tsx
ppro-ext-cep-typescript-react/: LICENCE  README.md  package.json
ppro-ext-cep-typescript-react/client/src/: helper.tsx  index.html  index.tsx
ppro-ext-cep-typescript-react/host/: tsconfig.json
public/: index.html
siv3d-windows/: siv3d-windows.sln  siv3d-windows.vcxproj
src/: App.tsx  appsscript.json  index.ts  index.tsx  main.cpp  main.ts  resource.rc.in
src/pages/: index.tsx
src/tests/: CMakeLists.txt
typescript-nextjs-pwa/: .gitignore  package-lock.json
typescript-nextjs-pwa/public/: index.html
typescript-react/: .babelrc  README.md  package.json  webpack.config.js
